// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tag Matches earlier configuration 1`] = `
.eytygi {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(161,97%,38%);
}

.eytygi:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.eytygi:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.eytygi:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa eytygi"
/>
`;

exports[`Button tag Matches earlier configuration if alternative and disabled prop is true 1`] = `
.bMRZue {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(289,65%,52%);
}

.bMRZue:hover {
  background-color: hsl(289,65%,47%);
  border: 0;
}

.bMRZue:disabled {
  background-color: hsl(289,25%,47%);
  border: 0;
}

.bMRZue:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa bMRZue"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if alternative and outlined prop is true 1`] = `
.cgOzKE {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(289,65%,52%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.cgOzKE:hover {
  background-color: transparent;
  border: 3px solid hsl(289,65%,47%);
}

.cgOzKE:disabled {
  background-color: transparent;
  border: 3px solid hsl(289,25%,47%);
}

.cgOzKE:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa cgOzKE"
/>
`;

exports[`Button tag Matches earlier configuration if alternative is true 1`] = `
.bMRZue {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(289,65%,52%);
}

.bMRZue:hover {
  background-color: hsl(289,65%,47%);
  border: 0;
}

.bMRZue:disabled {
  background-color: hsl(289,25%,47%);
  border: 0;
}

.bMRZue:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa bMRZue"
/>
`;

exports[`Button tag Matches earlier configuration if alternative, disabled and outlined prop is true 1`] = `
.cgOzKE {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(289,65%,52%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.cgOzKE:hover {
  background-color: transparent;
  border: 3px solid hsl(289,65%,47%);
}

.cgOzKE:disabled {
  background-color: transparent;
  border: 3px solid hsl(289,25%,47%);
}

.cgOzKE:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa cgOzKE"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if disabled prop is true 1`] = `
.eytygi {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(161,97%,38%);
}

.eytygi:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.eytygi:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.eytygi:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa eytygi"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if outlined is true 1`] = `
.hTSQBz {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(161,97%,38%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.hTSQBz:hover {
  background-color: transparent;
  border: 3px solid hsl(161,97%,33%);
}

.hTSQBz:disabled {
  background-color: transparent;
  border: 3px solid hsl(161,57%,33%);
}

.hTSQBz:not(:disabled) {
  cursor: pointer;
}

<button
  className="sc-bdVaJa hTSQBz"
/>
`;
